--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,7 +30,7 @@
         color: $grey-color-dark;
       }
     }
-    
+
     .book { float: right; text-align: right; }
 }
 
@@ -38,14 +38,15 @@
  * Site footer
  */
 .site-footer {
+  @include mq (print) { min-height: 800px; }
   font-family: $font-family-display;
   border-top: 1px solid $grey-color-light;
   margin-top: 3em;
-  
+
   padding: lines(2) 0;
   font-size: $small-font-size;
   color: $grey-color;
-  
+
   h2 {
     margin-bottom: lines(1);
   }
